@@ -22,61 +22,6 @@ sub new {
   return bless $self, $class;
 }
 
-sub compile_jitcode {
-  my ($self, $sub_abs_name, $source_file) = @_;
-  
-  # Source directory
-  my $source_dir = dirname $source_file;
-  
-  # Object created directory
-  my $object_dir = $source_dir;
-  
-  # Include directory
-  my $include_dirs = [];
-  
-  # Default include path
-  my $api_header_include_dir = $INC{"SPVM/Build/ExtUtil.pm"};
-  $api_header_include_dir =~ s/\/Build\/ExtUtil\.pm$//;
-  push @$include_dirs, $api_header_include_dir;
-  
-  my $cbuilder_config = {};
-  
-  # OPTIMIZE
-  $cbuilder_config->{optimize} ||= $SPVM::BUILD->extutil->optimize;
-  
-  # Compile source files
-  my $quiet = 1;
-  my $cbuilder = ExtUtils::CBuilder->new(quiet => $quiet, config => $cbuilder_config);
-  my $object_files = [];
-  
-  # Object file
-  my $object_file = $source_file;
-  $object_file =~ s/\.c$//;
-  $object_file .= '.o';
-  
-  # Compile source file
-  $cbuilder->compile(
-    source => $source_file,
-    object_file => $object_file,
-    include_dirs => $include_dirs,
-    extra_compiler_flags => $SPVM::BUILD->extutil->extra_compiler_flags
-  );
-  push @$object_files, $object_file;
-
-  # JIT Subroutine names
-  my $native_sub_name = $sub_abs_name;
-  $native_sub_name =~ s/:/_/g;
-  $native_sub_name = "SPVM_JITCODE_$native_sub_name";
-  
-  my $lib_file = $cbuilder->link(
-    objects => $object_files,
-    module_name => $native_sub_name,
-    dl_func_list => [$native_sub_name],
-  );
-  
-  return $lib_file;
-}
-
 sub create_jit_sub_name {
   my ($self, $sub_name) = @_;
   
@@ -89,6 +34,24 @@ sub create_jit_sub_name {
   return $jit_sub_name;
 }
 
+
+sub create_jit_sub_file_name {
+  my ($self, $sub_name) = @_;
+  
+  my $jit_sub_file_name = $sub_name;
+  
+  $jit_sub_file_name =~ s/:/_/g;
+
+  # In windows, upper case file name and lower case file name.
+  # so If FOO and foo subroutine is exists, one overwrite another.
+  # I want to prevent this. so '-' is appended to upper case character
+  $jit_sub_file_name =~ s/([A-Z])/-$1/g;
+  
+  $jit_sub_file_name = "SPVM_JITCODE_$jit_sub_file_name";
+
+  return $jit_sub_file_name;
+}
+
 sub compile_jit_sub_func {
   return $SPVM::BUILD->jit->compile_jit_sub(@_);
 }
@@ -98,6 +61,7 @@ sub compile_jit_sub {
   
   my $sub_abs_name = SPVM::Build::SPVMInfo::get_sub_name($sub_id);
   my $jit_sub_name = $self->create_jit_sub_name($sub_abs_name);
+  my $jit_sub_file_name = $self->create_jit_sub_file_name($sub_abs_name);
   
   # Build JIT code
   my $build_dir = $SPVM::BUILD_DIR;
@@ -107,9 +71,9 @@ sub compile_jit_sub {
   
   # Create build process directory
   my $build_process_dir = $SPVM::BUILD->create_build_process_dir;
-
-  my $jit_source_file = "$build_process_dir/$jit_sub_name.c";
-  my $jit_shared_lib_file = "$build_process_dir/$jit_sub_name.$Config{dlext}";
+  
+  my $jit_source_file = "$build_process_dir/$jit_sub_file_name.c";
+  my $jit_shared_lib_file = "$build_process_dir/$jit_sub_file_name.$Config{dlext}";
   
   # Compile JIT code
   open my $fh, '>', $jit_source_file
@@ -117,7 +81,58 @@ sub compile_jit_sub {
   print $fh $sub_jitcode_source;
   close $fh;
   
-  $self->compile_jitcode($sub_abs_name, $jit_source_file);
+  {
+    my $source_file = $jit_source_file;
+    
+    # Source directory
+    my $source_dir = dirname $source_file;
+    
+    # Object created directory
+    my $object_dir = $source_dir;
+    
+    # Include directory
+    my $include_dirs = [];
+    
+    # Default include path
+    my $api_header_include_dir = $INC{"SPVM/Build/ExtUtil.pm"};
+    $api_header_include_dir =~ s/\/Build\/ExtUtil\.pm$//;
+    push @$include_dirs, $api_header_include_dir;
+    
+    my $cbuilder_config = {};
+    
+    # OPTIMIZE
+    $cbuilder_config->{optimize} ||= $SPVM::BUILD->extutil->optimize;
+    
+    # Compile source files
+    my $quiet = 1;
+    my $cbuilder = ExtUtils::CBuilder->new(quiet => $quiet, config => $cbuilder_config);
+    my $object_files = [];
+    
+    # Object file
+    my $object_file = $source_file;
+    $object_file =~ s/\.c$//;
+    $object_file .= '.o';
+    
+    # Compile source file
+    $cbuilder->compile(
+      source => $source_file,
+      object_file => $object_file,
+      include_dirs => $include_dirs,
+      extra_compiler_flags => $SPVM::BUILD->extutil->extra_compiler_flags
+    );
+    push @$object_files, $object_file;
+
+    # JIT Subroutine names
+    my $native_sub_name = $sub_abs_name;
+    $native_sub_name =~ s/:/_/g;
+    $native_sub_name = "SPVM_JITCODE_$native_sub_name";
+    
+    my $lib_file = $cbuilder->link(
+      objects => $object_files,
+      module_name => $jit_sub_file_name,
+      dl_func_list => [$native_sub_name],
+    );
+  }
   
   my $sub_jit_address = $SPVM::BUILD->extutil->search_shared_lib_func_address($jit_shared_lib_file, $jit_sub_name);
   
